Fixes spacing

--- a/src/scss/grommet-core/_objects.quote.scss
+++ b/src/scss/grommet-core/_objects.quote.scss
@@ -1,7 +1,7 @@
 .quote {
   border-width: $inuit-base-spacing-unit;
   border-style: solid;
-  max-width: calc(100vw - #{$inuit-base-spacing-unit * 3});
+  max-width: calc(100vw - #{double($inuit-base-spacing-unit)});
 
   &--small {
     width: $inuit-base-spacing-unit * 20;
